@@ -1,5 +1,4 @@
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-server.pid-file              = env.SRCDIR + "/tmp/lighttpd/lighttpd.pid"
 
 #debug.log-request-header   = "enable"
 #debug.log-response-header  = "enable"
