@@ -3,7 +3,6 @@ debug.log-request-header = "enable"
 debug.log-response-header = "enable"
 debug.log-condition-handling = "enable"
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-server.pid-file              = env.SRCDIR + "/tmp/lighttpd/lighttpd.pid"
 
 ## 64 Mbyte ... nice limit
 server.max-request-size = 65000
