@@ -1,5 +1,4 @@
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-server.pid-file              = env.SRCDIR + "/tmp/lighttpd/lighttpd-proxy.pid"
 
 ## bind to port (default: 80)
 server.port                 = 2050
