@@ -3,7 +3,6 @@ debug.log-request-handling = "enable"
 debug.log-condition-handling = "enable"
 
 server.document-root         = env.SRCDIR + "/tmp/lighttpd/servers/www.example.org/pages/"
-server.pid-file              = env.SRCDIR + "/tmp/lighttpd/lighttpd.pid"
 
 ## bind to port (default: 80)
 server.port                 = 2048
